--- a/2constelations.html
+++ b/2constelations.html
@@ -187,13 +187,13 @@
 </figure>
 </div>
 <div class="row">        
-<article class='col'>
+<article class='col-md-12'>
         <h2 class="hhh" style="margin-top:15%" tabindex="43"> Ice Giant </h2>
           <p  class="pp" tabindex="44">
             Ice giants are planets which are mainly composed of dense gases which are heavier than those found in gas giants. These planets which were initially categorized as gas giants were established to be distinct in composition as they are primarily made up of carbon, sulfur, oxygen, and nitrogen instead of the hydrogen and helium found in gas giants. Neptune and Uranus are the two ice giants of our solar system.
           </p>
 </article>            
-<figure>
+<figure class="col">
           <img src='ice giant.jpg' tabindex="45" class='imagecenter' title="Pictures of the two Ice Giant in our Solar system, Uranus and Neptune, in that order" alt='Pictures of the two Ice Giant in our Solar system, Uranus and Neptune, in that order' class='lua1' style='width:70%; height:auto; border-radius: 8px;'> 
 </figure>
 </div>
@@ -237,8 +237,8 @@
          An ocean planet is a hypothetical type of planet which is thought to be wholly or predominantly covered by water. These planets have 10% of their mass being water (water accounts for only 0.05% of the Earth’s mass). Ocean planets have oceans hundreds of miles in depth.
       </p>
 </article>            
-<figure>
-       <img src='water.jpg' tabindex="56" title="Representation in Size and type of how Would Ocean Planets and Earth to the Right" alt='Representation in Size and type of how Would Ocean Planets and Earth to the Right' class='imagecenter' style='width:80%; height:auto; border-radius: 8px;'>
+<figure class="col">
+       <img src='water.jpg' tabindex="56" title="Representation in Size and type of how Would Ocean Planets and Earth to the Right" alt='Representation in Size and type of how Would Ocean Planets and Earth to the Right' class='imagecenter' style='width:100%; height:auto; border-radius: 8px;'>
 </figure>
 </div>
 <div class="row">
@@ -259,8 +259,8 @@
         Puffy planets are gas giants which exist close to their stars and temperatures from the stars cause their atmospheres to expand and result in such planets having a large equatorial radius but relatively low densities. There are no such planets in the solar system, but few have been discovered beyond our solar system including WASP-12b and WASP 17b.
     </p>
 </article>            
-<figure>
-      <img src='puffy.png' tabindex="61" class="imagecenter" title="Theoretical Representation of how the planet wasp 17b might look like and its size compared to Jupiter and Earth" alt='Theoretical Representation of how the planet wasp 17b might look like and its size compared to Jupiter and Earth' style="margin:1%; margin-top:1%; width:70%; height:auto;  border-radius: 8px;">
+<figure class="col">
+      <img src='puffy.png' tabindex="61" class="imagecenter" title="Theoretical Representation of how the planet wasp 17b might look like and its size compared to Jupiter and Earth" alt='Theoretical Representation of how the planet wasp 17b might look like and its size compared to Jupiter and Earth' style="margin:1%; margin-top:1%; width:80%; height:auto; border-radius: 8px;">
 </figure>
 </div>
 <div class="row">
@@ -270,8 +270,8 @@
          A silicate planet is primarily made up of silicate compounds. These planets are characterized by a solid crust, a silicate mantle, and an iron-based core. Depending on the presence of tectonic and volcanic activity, these planets can also have mountains, canyons, and valleys. All the four planets closest to the Sun (Mercury, Venus, Earth, and Mars) are categorized as silicate planets.
       </p>
 </article>            
-<figure>
-      <img src='uno doss tre catro.png' tabindex="64" title="Representation of the silicate Planets, from the left to the right, Mercury, Venus, Earth and Mars" alt='Representation of the silicate Planets, from the left to the right, Mercury, Venus, Earth and Mars' class='imagecenter' style='width:90%; height:auto; border-radius: 8px;'>
+<figure class="col"> 
+      <img src='uno doss tre catro.png' tabindex="64" title="Representation of the silicate Planets, from the left to the right, Mercury, Venus, Earth and Mars" alt='Representation of the silicate Planets, from the left to the right, Mercury, Venus, Earth and Mars' class='imagecenter' style='width:100%; height:auto; border-radius: 8px;'>
 </figure>
 </div>
 <div class="row">
