--- a/2constelationlations.html
+++ b/2constelationlations.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
 	<meta charset="utf-8">
       <meta name="viewport" content="width=device-width">
@@ -66,7 +66,7 @@
   
 <!-- title -->
 <div class="whatuwant" style="text-align: center;">
-    <h1 tabindex="9"><a id='potato12' style="color:white"> Constellations </a></h1>
+    <h1 tabindex="9"><a id='potato12' style="color:white"> Constellations </h1>
 
     <a href='2constelationsmap.html' style="color:white" tabindex="10"> Constellations Map </a>
 </div>
@@ -79,7 +79,7 @@
 
       <!-- http://www.seasky.org/constellations/constellation-antlia.html -->
 
-<div class="container-fluid"> 
+<figure class="container-fluid"> 
 <div class="row">
       <!-- andromeda 00 <a href='constelations.html'>-->
       <div class="col-md-3">
@@ -88,7 +88,7 @@
 
       <!-- antlia 01 <a href='constelations1.html'>-->
       <div class="col-md-3">
-      <img src='constelations2.png'alt='Constellation of atlia' title='Constellation of antlia' class='constelacoesoes' tabindex="12"  style="margin-right: 100vw!important;"></a>
+      <img src='constelations2.png'alt='Constellation of atlia' title='Constellation of antlia' class='constelacoesoes' tabindex="12" ></a>
       </div>
 
       <!-- apus 02 <a href='constelations2.html'>-->
@@ -547,6 +547,7 @@
             <a href="#myTopnav"  tabindex="99"> <i style="font-size:3vw" class="fas fa-chevron-up"></i> <br> Go back to top</a>
           </div>
 
+      </figure>
 </main>
 
 <!--
