--- a/2solar_system4.html
+++ b/2solar_system4.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
@@ -61,7 +61,7 @@
 
 <div class="whatuwant">
   
-  <h1 style="color:#fff" tabindex="8"> Marte </a></h1>
+  <h1 style="color:#fff" tabindex="8"> Mars</h1>
 
 </div>
 
