--- a/2solar_system5.html
+++ b/2solar_system5.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
@@ -51,12 +51,12 @@
       <a href="2constelations.html" tabindex="4">celestial bodies</a>
       <a href="2Spaceship.html" tabindex="5">Spaceship</a>
       <a href="2satellite.html" tabindex="6">satellite</a>
-    <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()" tabindex="1.5">&#9776;</a>
+    <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()" tabindex="2">&#9776;</a>
   </nav>
   
   
   
-  <a href='2solar_system.html' tabindex="7" title='Go back' alt='Go back'> <i class="fas fa-chevron-circle-left backarrow"></i> <a>
+  <a href='2solar_system.html' tabindex="7" title='Go back' alt='Go back'> <i class="fas fa-chevron-circle-left backarrow"></i> </a>
   
 
 <div class="whatuwant">
