--- a/2universe.html
+++ b/2universe.html
@@ -49,7 +49,7 @@
     <a href="2constelations.html" tabindex="4">celestial bodies</a>
     <a href="2Spaceship.html" tabindex="5">Spaceship</a>
     <a href="2satellite.html" tabindex="6">satellite</a>
-  <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()" tabindex="1.5">&#9776;</a>
+  <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()" tabindex="2">&#9776;</a>
 </nav>
 
 
@@ -70,10 +70,10 @@
     <img src="universe.jpg" alt='Picture of a galaxy' title="Picture of a Galaxy" width="100%" tabindex="11">
 </div>
 
-<section>
+
 
 <main class='mainuni' >
-
+    <section>
 
     <h1 style='margin-bottom:10%'><a id='whatis' tabindex="12" class='liil col'> What is it? </a></h1>
   
@@ -156,7 +156,7 @@
 </article>
 <article>
       <h2 class="col-md-12" tabindex="21">Size and Regions</h2>
-      <p class="pp col-md-12"tabindex="22">
+      <p class="pp col-md-12" tabindex="22">
       The size of the Universe is somewhat difficult to define. According to the general theory of relativity, far regions of space may never interact with ours even in the lifetime of the Universe due to the finite speed of light and the ongoing expansion of space. For example, radio messages sent from Earth may never reach some regions of space, even if the Universe were to exist forever: space may expand faster than light can traverse it.<br><br>
 
       Distant regions of space are assumed to exist and to be part of reality as much as we are, even though we can never interact with them. The spatial region that we can affect and be affected by is the observable universe. The observable universe depends on the location of the observer. By traveling, an observer can come into contact with a greater region of spacetime than an observer who remains still. Nevertheless, even the most rapid traveler will not be able to interact with all of space. Typically, the observable universe is taken to mean the portion of the Universe that is observable from our vantage point in the Milky Way.<br><br>
@@ -257,7 +257,7 @@
 </article>
 <article>
     <h2 class="col-md-12" tabindex="31">Dark Energy</h2>
-    <p class="pp col-md-12"tabindex="32">
+    <p class="pp col-md-12" tabindex="32">
     An explanation for why the expansion of the Universe is accelerating remains elusive. It is often attributed to "dark energy", an unknown form of energy that is hypothesized to permeate space. On a mass–energy equivalence basis, the density of dark energy (~ 7 × 10−30 g/cm3) is much less than the density of ordinary matter or dark matter within galaxies. However, in the present dark-energy era, it dominates the mass–energy of the universe because it is uniform across space.<br><br>
 
     Two proposed forms for dark energy are the cosmological constant, a constant energy density filling space homogeneously,and scalar fields such as quintessence or moduli, dynamic quantities whose energy density can vary in time and space. Contributions from scalar fields that are constant in space are usually also included in the cosmological constant. The cosmological constant can be formulated to be equivalent to vacuum energy. Scalar fields having only a slight amount of spatial inhomogeneity would be difficult to distinguish from a cosmological constant.<br><br>
@@ -319,7 +319,7 @@
     As we look far out in space, we are looking back in time, since light waves take time to cross space from their source to the observer. Hence, we view distant regions of the universe as they were long ago. According to the Big Bang theory, the universe originated in a great explosion and has been expanding ever since. At a very early epoch, before galaxies and stars formed, the universe was filled with hot glowing gas, and it was opaque. At some point during the first million or so years after the Big Bang occurred, the expanding and cooling gas became transparent. Hence, we can see out into space and back in time only until we come to the distant region that we observe as it was in the era when the universe cleared. Beyond that point, space is opaque so light waves cannot reach us. We see the glow from the hot gas that cooled to about 10,000° C and then cleared, but we cannot see further. This glow was emitted as ultraviolet light, but has been shifted to longer wavelengths by the expansion of the universe, so that we observe it today as a diffuse back ground of microwave (short-wave length radio) and infrared radiation. This microwave background is thus the radiation that comes to us from the limits of the observable universe.
     </p>
     <h2 class="col-md-12" tabindex="47">Earliest Conceptions Of The Universe</h2>
-    <p class="pp col-md-12"tabindex="48">
+    <p class="pp col-md-12" tabindex="48">
     All scientific thinking on the nature of the universe can be traced to the distinctive geometric patterns formed by the stars in the night sky. Even prehistoric people must have noticed that, apart from a daily rotation (which is now understood to arise from the spin of Earth), the stars did not seem to move with respect to one another: the stars appear “fixed.” Early nomads found that knowledge of the constellations could guide their travels, and they developed stories to help them remember the relative positions of the stars in the night sky. These stories became the mythical tales that are part of most cultures.
     <br><br>
     When nomads turned to farming, an intimate knowledge of the constellations served a new function—an aid in timekeeping, in particular for keeping track of the seasons. People had noticed very early that certain celestial objects did not remain stationary relative to the “fixed” stars; instead, during the course of a year, they moved forward and backward in a narrow strip of the sky that contained 12 constellations constituting the signs of the zodiac. Seven such wanderers were known to the ancients: the Sun, the Moon, Mercury, Venus, Mars, Jupiter, and Saturn. Foremost among the wanderers was the Sun: day and night came with its rising and setting, and its motion through the zodiac signaled the season to plant and the season to reap. Next in importance was the Moon: its position correlated with the tides, and its shape changed intriguingly over the course of a month. The Sun and Moon had the power of gods; why not then the other wanderers? Thus probably arose the astrological belief that the positions of the planets (from the Greek word planetes, “wanderers”) in the zodiac could influence worldly events and even cause the rise and fall of kings. In homage to this belief, Babylonian priests devised the week of seven days, whose names even in various modern languages (for example, English, French, or Norwegian) can still easily be traced to their origins in the seven planet-gods.
@@ -337,7 +337,7 @@
 
 
   
-</div>
+
 
 <!-- back to the top -->
 <div style="text-align:center">
@@ -387,7 +387,7 @@
     <br><br></p>
     <h2 class="col-md-12" tabindex="59">Historical Conceptions</h2>
     <br>
-    <p class="pp col-md-12" tabindex="58.5">
+    <p class="pp col-md-12" tabindex="59">
     Historically, there have been many ideas of the cosmos (cosmologies) and its origin (cosmogonies). Theories of an impersonal Universe governed by physical laws were first proposed by the Greeks and Indians. Ancient Chinese philosophy encompassed the notion of the Universe including both all of space and all of time. Over the centuries, improvements in astronomical observations and theories of motion and gravitation led to ever more accurate descriptions of the Universe. The modern era of cosmology began with Albert Einstein's 1915 general theory of relativity, which made it possible to quantitatively predict the origin, evolution, and conclusion of the Universe as a whole. Most modern, accepted theories of cosmology are based on general relativity and, more specifically, the predicted Big Bang.<br>
 </p>
   </article>
@@ -551,7 +551,7 @@
 
 
 <div class="row">
-<span class="col"> <img class='col-sm-12'src='https://www.space.com/images/i/000/028/510/original/shutterstock_25016035.jpg?interpolation=lanczos-none&fit=inside%7C660:*' style='width: 100%; border-radius: 8px' alt='Representation of how a wormhole works' alt='Representation of How a Wormhole Works' tabindex="86"> </span>
+<span class="col"> <img class='col-sm-12'src='https://www.space.com/images/i/000/028/510/original/shutterstock_25016035.jpg?interpolation=lanczos-none&fit=inside%7C660:*' style='width: 100%; border-radius: 8px' alt='Representation of how a wormhole works' title='Representation of How a Wormhole Works' tabindex="86"> </span>
 </div>
 
 
@@ -580,7 +580,7 @@
 
 
  
-
+    </section>
 
 
 
@@ -615,10 +615,10 @@
                 <div class="col-xs-12 col-sm-4 col-md-4">
                   <h5 tabindex="46">Social Media</h5>
                   <ul class="list-unstyled social">
-                    <li tabindex="102"><a href="javascript:void();"><a href='https://www.instagram.com' class="fontain col-md">  </a> <i class="fab fa-instagram"        title="Journey/instagram"></i> </a></li>
-                    <li tabindex="102"><a href="javascript:void();"><a href='https://en-gb.facebook.com' class="fontain col-md"> </a> <i class="fab fa-facebook-square"  title="Journey/facebook"></i>  </a></li>
-                    <li tabindex="103"><a href="javascript:void();"><a href='https://twitter.com' class="fontain col-md">        </a> <i class="fab fa-twitter-square"   title="Journey/twitter"></i>   </a></li>
-                    <li tabindex="104"><a href="javascript:void();"><a href='https://www.reddit.com' class="fontain col-md">     </a> <i class="fab fa-reddit-square"    title="Journey/reddit"></i>    </a></li>
+                    <li tabindex="102"><a href="javascript:void();"> </a> <a href='https://www.instagram.com' class="fontain col-md">   <i class="fab fa-instagram"        title="Journey/instagram"></i> </a></li>
+                    <li tabindex="102"><a href="javascript:void();"> </a> <a href='https://en-gb.facebook.com' class="fontain col-md">  <i class="fab fa-facebook-square"  title="Journey/facebook"></i>  </a></li>
+                    <li tabindex="103"><a href="javascript:void();"> </a> <a href='https://twitter.com' class="fontain col-md">         <i class="fab fa-twitter-square"   title="Journey/twitter"></i>   </a></li>
+                    <li tabindex="104"><a href="javascript:void();"> </a> <a href='https://www.reddit.com' class="fontain col-md">      <i class="fab fa-reddit-square"    title="Journey/reddit"></i>    </a></li>
                   </ul>
                 </div>
               </div>
