--- a/2Spaceship.html
+++ b/2Spaceship.html
@@ -52,12 +52,12 @@
       <a href="2constelations.html" tabindex="4">celestial bodies</a>
       <a href="2Spaceship.html" style='color: #2FBFFF' tabindex="5">Spaceship</a>
       <a href="2satellite.html" tabindex="6">satellite</a>
-    <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()" tabindex="1.5">&#9776;</a>
+    <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()" tabindex="2">&#9776;</a>
   </nav>
 
 
 
-  <main class='bodyimage'>
+  <main>
 
 
   <div class="whatuwant">
@@ -68,9 +68,9 @@
 
 
   <div class="container">
-  <iframe width="100%" title="Video about the structure of a spaceship" height="600hw" src="https://www.youtube.com/embed/-tHeRY175Ow" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen tabindex="8"></iframe>
+  <iframe width="100%" title="Video about the structure of a spaceship" height="600vh" src="https://www.youtube.com/embed/-tHeRY175Ow" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen tabindex="8"></iframe>
     
-
+<section  class='bodyimage'>
   <article>
   <h1 style="margin-bottom:5%" tabindex="9">Spacecraft</h1>
 
@@ -289,7 +289,7 @@
   </p>
 
   </article>
-
+</section>
 
 
 
@@ -307,7 +307,7 @@
           <div class="container ">
             <div class="row text-center text-xs-center text-sm-left text-md-left">
               <div class="col-xs-12 col-sm-4 col-md-4">
-                <h5 tabindex="43,5">About</h5>
+                <h5 tabindex="43">About</h5>
                 <ul class="list-unstyled quick-links">
                   <li tabindex="44"><a href="javascript:void();">About Journey</a></li>
                   <li tabindex="45"><a href="javascript:void();">Visual Identity</a></li>
@@ -332,10 +332,10 @@
               <div class="col-xs-12 col-sm-4 col-md-4">
                 <h5 tabindex="46">Social Media</h5>
                 <ul class="list-unstyled social">
-                  <li tabindex="56"><a href="javascript:void();"><a href='https://www.instagram.com' class="fontain col-md">  </a> <i class="fab fa-instagram"        title="Journey/instagram"></i> </a></li>
-                  <li tabindex="57"><a href="javascript:void();"><a href='https://en-gb.facebook.com' class="fontain col-md"> </a> <i class="fab fa-facebook-square"  title="Journey/facebook"></i>  </a></li>
-                  <li tabindex="58"><a href="javascript:void();"><a href='https://twitter.com' class="fontain col-md">        </a> <i class="fab fa-twitter-square"   title="Journey/twitter"></i>   </a></li>
-                  <li tabindex="59"><a href="javascript:void();"><a href='https://www.reddit.com' class="fontain col-md">     </a> <i class="fab fa-reddit-square"    title="Journey/reddit"></i>    </a></li>
+                  <li tabindex="56"><a href="javascript:void();"> </a> <a href='https://www.instagram.com' class="fontain col-md">   <i class="fab fa-instagram"        title="Journey/instagram"></i> </a></li>
+                  <li tabindex="57"><a href="javascript:void();"> </a> <a href='https://en-gb.facebook.com' class="fontain col-md">  <i class="fab fa-facebook-square"  title="Journey/facebook"></i>  </a></li>
+                  <li tabindex="58"><a href="javascript:void();"> </a> <a href='https://twitter.com' class="fontain col-md">         <i class="fab fa-twitter-square"   title="Journey/twitter"></i>   </a></li>
+                  <li tabindex="59"><a href="javascript:void();"> </a> <a href='https://www.reddit.com' class="fontain col-md">      <i class="fab fa-reddit-square"    title="Journey/reddit"></i>    </a></li>
                 </ul>
               </div>
             </div>
