--- a/2satellite.html
+++ b/2satellite.html
@@ -1,5 +1,5 @@
   <!DOCTYPE html>
-<html lang="en">
+  <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
@@ -56,7 +56,8 @@
   <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()" tabindex="2">&#9776;</a>
 </nav>
 
-<main class='bodyimage' >
+
+<main >
 
 <div class="whatuwant">
   
@@ -68,7 +69,7 @@
 
 <div class="container">
 <div  class="row">
-<iframe width="100%" title="video about the international space station" height="600hw" src="https://www.youtube.com/embed/Q38zoERGl8s" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen tabindex="9"></iframe>
+<iframe width="100%" title="video about the international space station" height="600vh" src="https://www.youtube.com/embed/Q38zoERGl8s" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen tabindex="9"></iframe>
 </div> 
 
 
@@ -77,7 +78,7 @@
 
   <iframe src="https://solarsystem.nasa.gov/gltf_embed/2397" width="100%" height="450px" frameborder="0" />
   -->
-
+<section class='bodyimage'>
 <article>
   <h1 style="margin-top:5%" tabindex="10"> What is a Satellite </h1>
 
@@ -180,7 +181,7 @@
   </p>
 </article>
 
-
+</section>
     
     <div style="text-align:center">
       <a href="#top3"  tabindex="27"> <i style="font-size:3vw" class="fas fa-chevron-up"></i> <br> Go back to top</a>
@@ -217,10 +218,10 @@
               <div class="col-xs-12 col-sm-4 col-md-4">
                 <h5 tabindex="46">Social Media</h5>
                 <ul class="list-unstyled social">
-                  <li tabindex="40"><a href="javascript:void();"><a href='https://www.instagram.com' class="fontain col-md"> </a> <i class="fab fa-instagram"        title="Journey/instagram"></i> </a></li>
-                  <li tabindex="41"><a href="javascript:void();"><a href='https://en-gb.facebook.com' class="fontain col-md"></a> <i class="fab fa-facebook-square"  title="Journey/facebook"></i>  </a></li>
-                  <li tabindex="42"><a href="javascript:void();"><a href='https://twitter.com' class="fontain col-md">       </a> <i class="fab fa-twitter-square"   title="Journey/twitter"></i>   </a></li>
-                  <li tabindex="43"><a href="javascript:void();"><a href='https://www.reddit.com' class="fontain col-md">    </a> <i class="fab fa-reddit-square"    title="Journey/reddit"></i>    </a></li>
+                  <li tabindex="40"><a href="javascript:void();"> </a> <a href='https://www.instagram.com' class="fontain col-md">  <i class="fab fa-instagram"        title="Journey/instagram"></i> </a></li>
+                  <li tabindex="41"><a href="javascript:void();"> </a> <a href='https://en-gb.facebook.com' class="fontain col-md"> <i class="fab fa-facebook-square"  title="Journey/facebook"></i>  </a></li>
+                  <li tabindex="42"><a href="javascript:void();"> </a> <a href='https://twitter.com' class="fontain col-md">        <i class="fab fa-twitter-square"   title="Journey/twitter"></i>   </a></li>
+                  <li tabindex="43"><a href="javascript:void();"> </a> <a href='https://www.reddit.com' class="fontain col-md">     <i class="fab fa-reddit-square"    title="Journey/reddit"></i>    </a></li>
                 </ul>
               </div>
             </div>
