--- a/2solar_system2.html
+++ b/2solar_system2.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
@@ -50,7 +50,7 @@
       <a href="2constelations.html" tabindex="4">celestial bodies</a>
       <a href="2Spaceship.html" tabindex="5">Spaceship</a>
       <a href="2satellite.html" tabindex="6">satellite</a>
-    <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()" tabindex="1.5">&#9776;</a>
+    <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()" tabindex="2">&#9776;</a>
   </nav>
   
   
@@ -60,7 +60,7 @@
 
 <div class="whatuwant">
   
-  <h1 style="color:#fff" tabindex="8"> Venus </a></h1>
+  <h1 style="color:#fff" tabindex="8"> Venus </h1>
 
 </div>
 
